update test jvmArgs