@@ -17,11 +17,13 @@ dependencies {
 
 tasks.named<Test>("test") {
     jvmArgs(
+        "--illegal-access=permit",
         "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-        "--add-exports=java.base/java.lang.reflect=ALL-UNNAMED",
-        "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
         "--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"
+        "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-exports=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-exports java.base/jdk.internal.ref=ALL-UNNAMED"
     )
     useJUnitPlatform()
 }
